jar jar 3 firestore

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
  
         <script>
             var firebaseConfig = {
-            apiKey: "AIzaSyCNyn2NJqJRIp5f_ya1O0XObA4i5Sq8gnQ",
-            authDomain: "jar-jar-5933d.firebaseapp.com",
-            databaseURL: "https://jar-jar-5933d.firebaseio.com",
-            projectId: "jar-jar-5933d",
-            storageBucket: "jar-jar-5933d.appspot.com",
-            messagingSenderId: "636468591443",
-            appId: "1:636468591443:web:07a82aa53c1b38e97dffa6",
-            measurementId: "G-5M4HSRW3XN"
+                apiKey: "AIzaSyCNyn2NJqJRIp5f_ya1O0XObA4i5Sq8gnQ",
+                authDomain: "jar-jar-5933d.firebaseapp.com",
+                databaseURL: "https://jar-jar-5933d.firebaseio.com",
+                projectId: "jar-jar-5933d",
+                storageBucket: "jar-jar-5933d.appspot.com",
+                messagingSenderId: "636468591443",
+                appId: "1:636468591443:web:38316ff257d97bbd7dffa6",
+                measurementId: "G-JY6W1VF0YW"
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
