jar jar 5 database

--- a/index.html
+++ b/index.html
@@ -122,14 +122,13 @@
  
         <script>
             var firebaseConfig = {
-                apiKey: "AIzaSyCNyn2NJqJRIp5f_ya1O0XObA4i5Sq8gnQ",
-                authDomain: "jar-jar-5933d.firebaseapp.com",
-                databaseURL: "https://jar-jar-5933d.firebaseio.com",
-                projectId: "jar-jar-5933d",
-                storageBucket: "jar-jar-5933d.appspot.com",
-                messagingSenderId: "636468591443",
-                appId: "1:636468591443:web:38316ff257d97bbd7dffa6",
-                measurementId: "G-JY6W1VF0YW"
+                apiKey: "AIzaSyDUakReG0Vqfs9jisT1sUp6byCV24f0Mws",
+                authDomain: "jarjar4-70529.firebaseapp.com",
+                databaseURL: "https://jarjar4-70529.firebaseio.com",
+                projectId: "jarjar4-70529",
+                storageBucket: "jarjar4-70529.appspot.com",
+                messagingSenderId: "910886322784",
+                appId: "1:910886322784:web:020ef19aa2ff3caef0f905"
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
