--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
-            firebase.analytics();
+            //firebase.analytics();
  
             //sets role of player as hunter or ghost
             let position = Math.random() 
@@ -147,6 +147,8 @@
                     ghostTransparency = 1.0;
                     hunterTransparency = 1.0;
                 }
+                console.log(position)
+
             let enemyOne;
             let enemyOneUsername = prompt("1st enemy username?");
             let enemyTwo;
@@ -659,7 +661,12 @@
                 }, false);
             }
 
+
             function start() {
+                console.log(user,
+position,
+lastX,
+lastY)
                 startTimer();
                 user = document.getElementById('username').value; 
                 firebase.firestore().collection('Players').doc(user).set({
