--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         if (enemyOne.position == 'hunter') {
                             ctx.globalAlpha = hunterTransparency;
                         } else {
-                            ////ctx.globalAlpha = ghostTransparency;
+                            ctx.globalAlpha = ghostTransparency;
                         }
                         ctx.drawImage(document.getElementById(enemyOne.position), enemyOne.xPos, enemyOne.yPos, width, height);
                         ctx.globalAlpha = 1.0;
@@ -249,7 +249,7 @@
                         if (enemyTwo.position == 'hunter') {
                             ctx.globalAlpha = hunterTransparency;
                         } else {
-                            ////ctx.globalAlpha = ghostTransparency;
+                            ctx.globalAlpha = ghostTransparency;
                         }
                         ctx.drawImage(document.getElementById(enemyTwo.position), enemyTwo.xPos, enemyTwo.yPos, width, height);
                         ctx.globalAlpha = 1.0;
@@ -266,7 +266,7 @@
                         if (enemyThree.position == 'hunter') {
                             ctx.globalAlpha = hunterTransparency;
                         } else {
-                            ////ctx.globalAlpha = ghostTransparency;
+                            ctx.globalAlpha = ghostTransparency;
                         }
                         ctx.drawImage(document.getElementById(enemyThree.position), enemyThree.xPos, enemyThree.yPos, width, height);
                         ctx.globalAlpha = 1.0;
@@ -290,7 +290,7 @@
                                 if (enemyOne.position == 'hunter') {
                                     ctx.globalAlpha = hunterTransparency;
                                 } else {
-                                    //ctx.globalAlpha = ghostTransparency;
+                                    ctx.globalAlpha = ghostTransparency;
                                 }
                                 ctx.drawImage(document.getElementById(enemyOne.position), enemyOne.xPos, enemyOne.yPos, width, height);
                                 ctx.globalAlpha = 1.0;
@@ -324,7 +324,7 @@
                                 if (enemyTwo.position == 'hunter') {
                                     ctx.globalAlpha = hunterTransparency;
                                 } else {
-                                    //ctx.globalAlpha = ghostTransparency;
+                                    ctx.globalAlpha = ghostTransparency;
                                 }
                                 ctx.drawImage(document.getElementById(enemyTwo.position), enemyTwo.xPos, enemyTwo.yPos, width, height);
                                 ctx.globalAlpha = 1.0;
@@ -357,7 +357,7 @@
                                 if (enemyThree.position == 'hunter') {
                                     ctx.globalAlpha = hunterTransparency;
                                 } else {
-                                    //ctx.globalAlpha = ghostTransparency;
+                                    ctx.globalAlpha = ghostTransparency;
                                 }
                                 ctx.drawImage(document.getElementById(enemyThree.position), enemyThree.xPos, enemyThree.yPos, width, height);
                                 ctx.globalAlpha = 1.0;
@@ -403,7 +403,7 @@
                             if (enemyOne.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyOne.position), enemyOne.xPos, enemyOne.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -436,7 +436,7 @@
                             if (enemyTwo.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyTwo.position), enemyTwo.xPos, enemyTwo.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -469,7 +469,7 @@
                             if (enemyThree.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyThree.position), enemyThree.xPos, enemyThree.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -514,7 +514,7 @@
                             if (enemyOne.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyOne.position), enemyOne.xPos, enemyOne.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -547,7 +547,7 @@
                             if (enemyTwo.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyTwo.position), enemyTwo.xPos, enemyTwo.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -580,7 +580,7 @@
                             if (enemyThree.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyThree.position), enemyThree.xPos, enemyThree.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -625,7 +625,7 @@
                             if (enemyOne.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyOne.position), enemyOne.xPos, enemyOne.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -658,7 +658,7 @@
                             if (enemyTwo.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyTwo.position), enemyTwo.xPos, enemyTwo.yPos, width, height);
                             ctx.globalAlpha = 1.0;
@@ -691,7 +691,7 @@
                             if (enemyThree.position == 'hunter') {
                                 ctx.globalAlpha = hunterTransparency;
                             } else {
-                                //ctx.globalAlpha = ghostTransparency;
+                                ctx.globalAlpha = ghostTransparency;
                             }
                             ctx.drawImage(document.getElementById(enemyThree.position), enemyThree.xPos, enemyThree.yPos, width, height);
                             ctx.globalAlpha = 1.0;
